# dspy-automotive-extractor

./: .env.template  .gitignore  ANALYSIS.md  README.md  download_2021_data.ps1  pyproject.toml  requirements.txt
.github/workflows/: demo-smoke.yml
results/: optimized_contrastive_cot_constitutional_bootstrap.json  optimized_contrastive_cot_constitutional_domain_expertise_format_enforcement_bootstrap.json  optimized_contrastive_cot_context_anchoring_bootstrap.json  optimized_contrastive_cot_domain_expertise_bootstrap.json  optimized_contrastive_cot_error_prevention_bootstrap.json  optimized_contrastive_cot_format_enforcement_bootstrap.json  optimized_contrastive_cot_multishot_reasoning_bootstrap.json  optimized_contrastive_cot_specificity_bootstrap.json  optimized_contrastive_cot_with_reasoning.json  optimized_contrastive_cot_without_reasoning.json  optimized_cot_context_anchoring_format_enforcement_bootstrap.json  optimized_cot_context_anchoring_specificity_error_prevention_format_enforcement_bootstrap.json  optimized_cot_multishot_reasoning_bootstrap.json  optimized_cot_with_reasoning.json  optimized_cot_without_reasoning.json  optimized_naive.json  optimized_naive_context_anchoring_specificity_error_prevention_bootstrap.json  optimized_naive_error_prevention_bootstrap.json  optimized_naive_specificity_bootstrap.json  optimized_naive_specificity_error_prevention_bootstrap.json  optimized_naive_with_reasoning.json  optimized_plan_and_solve_constitutional_domain_expertise_bootstrap.json  optimized_plan_and_solve_with_reasoning.json  optimized_plan_and_solve_without_reasoning.json  optimized_self_refine_with_reasoning.json  optimized_self_refine_without_reasoning..json  results_summary.json
src/: _01_load_data.py  _02_define_schema.py  _03_define_program.py  _04_run_optimization.py  _05_meta_optimizers.py  _06_run_meta_optimization.py  app.py  app_cloud.py  settings.py  verify_gpu.py
